--- a/index.html
+++ b/index.html
@@ -118,5 +118,6 @@
     </div>
   </footer>
   <script src="theme-switch.js"></script>
+  <button id="scrollUpBtn" title="Go to top">&#8679;</button>
 </body>
 </html>
