--- a/services.html
+++ b/services.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Our Services | WebDevLocal</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     .service-card .service-price {
       display: block;
       font-size: 1.08rem;
       font-weight: 600;
-      color: #ff9800;
+      color: #2563eb;
       margin-bottom: 0.5rem;
       margin-top: 0.2rem;
       letter-spacing: 0.01em;
@@ -34,7 +35,7 @@
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="index.html#why-us">Why Us</a></li>
+          <li><a href="about-us.html">About Us</a></li>
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
       </nav>
@@ -171,10 +172,20 @@
 
   <footer class="footer">
     <div class="container">
+      <div class="footer-links">
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="about-us.html">About Us</a>
+        <a href="#contact">Contact</a>
+      </div>
       <p>&copy; 2025 WebDevLocal. All rights reserved.</p>
     </div>
   </footer>
   <script src="theme-switch.js"></script>
-  <button id="scrollUpBtn" title="Go to top">&#8679;</button>
+  <button id="scrollUpBtn" title="Go to top" aria-label="Go to top">
+    <svg viewBox="0 0 24 24">
+      <path d="M12 4c.28 0 .53.11.71.29l7 7a1 1 0 01-1.42 1.42L13 7.41V20a1 1 0 01-2 0V7.41l-5.29 5.3A1 1 0 014.29 11.3l7-7A1 1 0 0112 4z" fill="#fff"/>
+    </svg>
+  </button>
 </body>
 </html>
