--- a/services.html
+++ b/services.html
@@ -69,7 +69,7 @@
   <main>
     <section class="services">
       <div class="container">
-        <h2>Web Development</h2>
+        <h2 id="web-development">Web Development</h2>
         <div class="services-list">
           <div class="service-card">
             <div style="font-size: 2.5rem; margin-bottom: 0.7rem;">🎨</div>
@@ -103,7 +103,7 @@
           </div>
         </div>
 
-        <h2 style="margin-top:3rem;">IT Setup & Services</h2>
+        <h2 id="it-setup" style="margin-top:3rem;">IT Setup & Services</h2>
         <div class="services-list">
           <div class="service-card">
             <div style="font-size: 2.5rem; margin-bottom: 0.7rem;">💻</div>
@@ -139,7 +139,7 @@
           </div>
         </div>
 
-        <h2 style="margin-top:3rem;">Moving Tech</h2>
+        <h2 id="moving-tech" style="margin-top:3rem;">Moving Tech</h2>
         <div class="services-list">
           <div class="service-card">
             <div style="font-size: 2.5rem; margin-bottom: 0.7rem;">🧳</div>
