completed the arrow buttons and logo
completed the arrow buttons and logo

--- a/about-us.html
+++ b/about-us.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us | Tech Buddy</title>
+  <title>About Us | Tech Chimps</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -84,7 +84,7 @@
   <header class="header">
     <div class="container">
       <nav class="navbar">
-        <a href="index.html"><img src="logo_clear2.png" alt="Tech Buddy Logo" style="height: 70px;" /></a>
+        <a href="index.html"><img src="TechChimp1_clear.png" alt="Tech Chimps Logo" style="height: 70px;" /></a>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="services.html">Services</a></li>
@@ -94,7 +94,7 @@
       </nav>
       <div class="hero">
         <div class="hero-content">
-          <h1>About Tech Buddy</h1>
+          <h1>About Tech Chimps</h1>
           <p>
             Discover what makes us the preferred web and IT partner for local businesses. We combine local know-how, technical excellence, and personal support to bring your business online—beautifully and affordably.
           </p>
@@ -106,7 +106,7 @@
   <main>
     <section class="why-us">
       <div class="container">
-        <h2>Our Strengths</h2>
+        <h2 style="color:#fdd835;">Our Strengths</h2>
         <div class="services-list">
           <div class="service-card">
             <span class="why-feature-icon">📍</span>
@@ -152,16 +152,16 @@
         <h2 style="text-align:center;">What Our Clients Say</h2>
         <div class="services-list" style="flex-wrap: wrap;">
           <div class="testimonial-card">
-            “Tech Buddy made our website look professional and brought in new customers. The team was responsive and explained everything in plain English.”
-            <div class="testimonial-author">– Lisa H., Bakery Owner</div>
+            “Tech Chimps made our website look professional and brought in new customers. The team was responsive and explained everything in plain English.”
+            <div class="testimonial-author" style="color:#000">– Lisa H., Bakery Owner</div>
           </div>
           <div class="testimonial-card">
-            “Switching our IT support to Tech Buddy was the best business move we made. Fast, friendly, and always there when we need them.”
-            <div class="testimonial-author">– Marco P., Print Shop</div>
+            “Switching our IT support to Tech Chimps was the best business move we made. Fast, friendly, and always there when we need them.”
+            <div class="testimonial-author" style="color:#000">– Marco P., Print Shop</div>
           </div>
           <div class="testimonial-card">
             “They handled our website redesign and office move tech setup. Everything just worked—highly recommended.”
-            <div class="testimonial-author">– Sarah J., Real Estate Agent</div>
+            <div class="testimonial-author" style="color:#000">– Sarah J., Real Estate Agent</div>
           </div>
         </div>
       </div>
@@ -172,25 +172,25 @@
         <h2 style="text-align:center;">Frequently Asked Questions</h2>
         <div class="faq-list">
           <div class="faq-item">
-            <div class="faq-question">How long does it take to build a website?</div>
+            <div class="faq-question" style="color:#000">How long does it take to build a website?</div>
             <div style="color:#757391;">
               Our typical turnaround for a small business website is 2–4 weeks. The exact timeline depends on your requirements and how quickly you can provide content and feedback. We’ll always share a clear schedule before we start.
             </div>
           </div>
           <div class="faq-item">
-            <div class="faq-question">Can you update my existing website?</div>
+            <div class="faq-question" style="color:#000">Can you update my existing website?</div>
             <div style="color:#757391;">
               Yes! We can update, redesign, or add features to your current website—even if we didn't build it originally. We'll review your site, discuss your goals, and recommend the best next steps.
             </div>
           </div>
           <div class="faq-item">
-            <div class="faq-question">Do you offer ongoing support?</div>
+            <div class="faq-question" style="color:#000">Do you offer ongoing support?</div>
             <div style="color:#757391;">
               Absolutely. We offer affordable maintenance plans to handle updates, security, and backups. You’ll also have direct access to our team for any future help or emergencies.
             </div>
           </div>
           <div class="faq-item">
-            <div class="faq-question">Is my business too small for a custom website?</div>
+            <div class="faq-question" style="color:#000">Is my business too small for a custom website?</div>
             <div style="color:#757391;">
               Not at all! We work with all types of businesses—from solo entrepreneurs to established companies. Every business deserves a professional web presence, and we have solutions for every budget.
             </div>
@@ -208,7 +208,7 @@
         <a href="about-us.html">About Us</a>
         <a href="#contact">Contact</a>
       </div>
-      <p>&copy; 2025 Tech Buddy. All rights reserved.</p>
+      <p>&copy; 2025 Tech Chimps. All rights reserved.</p>
     </div>
   </footer>
   <script src="theme-switch.js"></script>
