--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="container">
       <nav class="navbar">
-	  <a href="index.html"><img src="logo_clear2.png" alt="Tech Buddy Logo" style="height: 70px;" /></a>
+	  <a href="index.html"><img src="TechChimp1_clear.png" alt="Tech Buddy Logo" style="height: 80px;" /></a>
         <!-- <div class="logo">
           <a href="index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
             <img src="logo-tech-buddy.svg" alt="Tech Buddy Logo" class="logo-img" />
@@ -181,7 +181,7 @@
         <a href="about-us.html">About Us</a>
         <a href="#contact">Contact</a>
       </div>
-      <p>&copy; 2025 Tech Buddy. All rights reserved.</p>
+      <p>&copy; 2025 Tech Chimps. All rights reserved.</p>
     </div>
   </footer>
   
