--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Our Services | Tech Buddy</title>
+  <title>Our Services | Tech Chimps</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -47,7 +47,7 @@
   <header class="header">
     <div class="container">
       <nav class="navbar">
-        <a href="index.html"><img src="logo_clear2.png" alt="Tech Buddy Logo" style="height: 70px;" /></a>
+        <a href="index.html"><img src="TechChimp1_clear.png" alt="Tech Chimps Logo" style="height: 70px;" /></a>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="services.html">Services</a></li>
@@ -194,7 +194,7 @@
         <a href="about-us.html">About Us</a>
         <a href="#contact">Contact</a>
       </div>
-      <p>&copy; 2025 Tech Buddy. All rights reserved.</p>
+      <p>&copy; 2025 Tech Chimps. All rights reserved.</p>
     </div>
   </footer>
   <script src="theme-switch.js"></script>
