--- a/about-us.html
+++ b/about-us.html
@@ -6,79 +6,6 @@
   <title>About Us | Tech Chimps</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    <!-- .why-feature-icon {
-      font-size: 2.5rem;
-      margin-bottom: 0.7rem;
-      display: inline-block;
-    }
-    .testimonial-card {
-      background: var(--card-bg-light);
-      border-radius: 1.2rem;
-      box-shadow: var(--shadow);
-      max-width: 340px;
-      margin: 0.5rem;
-      padding: 1.3rem 1.1rem 1rem 1.1rem;
-      text-align: left;
-      font-style: italic;
-      transition: transform 0.2s;
-      color: #757391;
-    }
-    .testimonial-card:hover {
-      transform: translateY(-3px) scale(1.03);
-    }
-    .testimonial-author {
-      font-style: normal;
-      font-weight: 600;
-      margin-top: 0.9rem;
-      color: var(--primary);
-    }
-    .faq-list {
-      max-width: 800px;
-      margin: 2rem auto 0 auto;
-      padding: 0;
-    }
-    .faq-item {
-      margin-bottom: 1.3rem;
-      background: var(--card-bg-light);
-      border-radius: 0.7rem;
-      box-shadow: var(--shadow);
-      padding: 1rem 1.4rem;
-    }
-    .faq-question {
-      font-weight: bold;
-      margin-bottom: 0.4rem;
-      color: var(--primary);
-    }
-    section h2 {
-      color: var(--primary-dark);
-    }
-    [data-theme="dark"] section h2 {
-      color: var(--accent);
-    }
-    .logo-img {
-      height: 48px;
-      vertical-align: middle;
-      margin-right: 10px;
-    }
-    .logo-text {
-      font-size: 1.7rem;
-      font-weight: bold;
-      letter-spacing: 1.5px;
-      font-family: inherit;
-      color: inherit;
-      vertical-align: middle;
-    }
-    @media (max-width: 600px) {
-      .logo-img {
-        height: 36px;
-        margin-right: 7px;
-      }
-      .logo-text {
-        font-size: 1.25rem;
-      }
-    } -->
-  </style>
 </head>
 <body>
   <header class="header">
@@ -153,15 +80,15 @@
         <div class="services-list" style="flex-wrap: wrap;">
           <div class="testimonial-card">
             “Tech Chimps made our website look professional and brought in new customers. The team was responsive and explained everything in plain English.”
-            <div class="testimonial-author" style="color:#000">– Lisa H., Bakery Owner</div>
+            <div class="testimonial-author">– Lisa H., Bakery Owner</div>
           </div>
           <div class="testimonial-card">
             “Switching our IT support to Tech Chimps was the best business move we made. Fast, friendly, and always there when we need them.”
-            <div class="testimonial-author" style="color:#000">– Marco P., Print Shop</div>
+            <div class="testimonial-author">– Marco P., Print Shop</div>
           </div>
           <div class="testimonial-card">
             “They handled our website redesign and office move tech setup. Everything just worked—highly recommended.”
-            <div class="testimonial-author" style="color:#000">– Sarah J., Real Estate Agent</div>
+            <div class="testimonial-author">– Sarah J., Real Estate Agent</div>
           </div>
         </div>
       </div>
@@ -172,26 +99,26 @@
         <h2 style="text-align:center;">Frequently Asked Questions</h2>
         <div class="faq-list">
           <div class="faq-item">
-            <div class="faq-question" style="color:#000">How long does it take to build a website?</div>
-            <div style="color:#757391;">
+            <div class="faq-question">How long does it take to build a website?</div>
+            <div>
               Our typical turnaround for a small business website is 2–4 weeks. The exact timeline depends on your requirements and how quickly you can provide content and feedback. We’ll always share a clear schedule before we start.
             </div>
           </div>
           <div class="faq-item">
-            <div class="faq-question" style="color:#000">Can you update my existing website?</div>
-            <div style="color:#757391;">
+            <div class="faq-question">Can you update my existing website?</div>
+            <div>
               Yes! We can update, redesign, or add features to your current website—even if we didn't build it originally. We'll review your site, discuss your goals, and recommend the best next steps.
             </div>
           </div>
           <div class="faq-item">
-            <div class="faq-question" style="color:#000">Do you offer ongoing support?</div>
-            <div style="color:#757391;">
+            <div class="faq-question">Do you offer ongoing support?</div>
+            <div>
               Absolutely. We offer affordable maintenance plans to handle updates, security, and backups. You’ll also have direct access to our team for any future help or emergencies.
             </div>
           </div>
           <div class="faq-item">
-            <div class="faq-question" style="color:#000">Is my business too small for a custom website?</div>
-            <div style="color:#757391;">
+            <div class="faq-question">Is my business too small for a custom website?</div>
+            <div>
               Not at all! We work with all types of businesses—from solo entrepreneurs to established companies. Every business deserves a professional web presence, and we have solutions for every budget.
             </div>
           </div>
