--- a/about-us.html
+++ b/about-us.html
@@ -33,7 +33,7 @@
   <main>
     <section class="why-us">
       <div class="container">
-        <h2 style="color:#fdd835;">Our Strengths</h2>
+        <h2>Our Strengths</h2>
         <div class="services-list">
           <div class="service-card">
             <span class="why-feature-icon">📍</span>
