--- a/about-us.html
+++ b/about-us.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="container">
       <nav class="navbar">
-        <a href="index.html"><img src="TechChimp1_clear.png" alt="Tech Chimps Logo" style="height: 70px;" /></a>
+        <a href="index.html"><img src="LogoNew.png" alt="Tech Chimps Logo" style="height: 70px;" /></a>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="services.html">Services</a></li>
